:sparkles: feat: JWT 토큰에서 role 추출 및 권한 인증 로직 추가